--- a/examples.html
+++ b/examples.html
@@ -35,6 +35,24 @@ int main(int argc,char** argv) {
         };
 }
 </PRE></CODE>
+</PRE></CODE>
+</TD></TR></TABLE>
+<HR><BR>
+<TABLE width='100%' bgcolor='CFCFCF' border=0><TR><TD>
+<CODE><PRE>
+require 'websrv'
+
+local server = websrv.server.init{port = 80, file = 'help.log'}
+websrv.server.addhandler{server = server, mstr = '* *', func = function(write)
+	write('Content-type: text/plain\r\n\r\n')
+	write('Hello, World!\r\n')
+end}
+
+while true do
+	websrv.server.run{server = server}
+end
+</PRE></CODE>
+</PRE></CODE>
 </TD></TR></TABLE>
 <HR><BR>
 
