--- a/examples.html
+++ b/examples.html
@@ -206,25 +206,25 @@ void urlauthenticate() {
                 web_client_HTTPdirective("HTTP/1.1 401 Authorization Required");
                 printf("WWW-Authenticate: Basic realm=\"This site info\"\r\n");
                 printf("Content-type: text/html\r\n\r\n");
-                printf("&lt;BODY&gt;\n");
-                printf("&lt;font color='FF0000'&gt;Access denied&lt;/font&gt;\n");
-                printf("&lt;/BODY&gt;\n");
+                printf("<BODY>\n");
+                printf("<font color='FF0000'>Access denied</font>\n");
+                printf("</BODY>\n");
                 return;
         }
         printf("Content-type: text/html\r\n\r\n");         
-        printf("&lt;BODY bgcolor='EFEFEF'&gt;\n");        
+        printf("<BODY bgcolor='EFEFEF'>\n");        
         printf("You entered in your area\n");
-        printf("&lt;/BODY&gt;&lt;/HTML&gt;\n");
+        printf("</BODY></HTML>\n");
 };
 
 
-main() {
+void main() {
         struct web_server server; // server handler
-        if(!web_server_init(&server,83,"help.log",0)) { // initialize
+        if(!web_server_init(&server,80,"help.log",0)) { // initialize
                 fprintf(stderr,"can't open listen socket\n");
         };
 
-        web_server_addhandler(&server,"* /auth",urlauthenticate,0);
+        web_server_addhandler(&server,"* *",urlauthenticate,0);
         while(1) {
                 web_server_run(&server);   // run server
         };
@@ -232,7 +232,12 @@ main() {
 </PRE></CODE>
 </TD></TR></TABLE>
 <HR><BR>
+<TABLE width='100%' bgcolor='CFCFCF' border=0><TR><TD>
+<CODE><PRE>
 
+</PRE></CODE>
+</TD></TR></TABLE>
+<HR><BR>
 
 <CENTER><A name=ssl><B><font color='000077'><H3>openssl for (https)</H3></font></B></CENTER>
 <small> <B>used functions:</B><BR>
