--- a/examples.html
+++ b/examples.html
@@ -43,9 +43,9 @@ int main(int argc,char** argv) {
 require 'websrv'
 
 local server = websrv.server.init{port = 80, file = 'help.log'}
-websrv.server.addhandler{server = server, mstr = '* *', func = function(write)
-	write('Content-type: text/plain\r\n\r\n')
-	write('Hello, World!\r\n')
+websrv.server.addhandler{server = server, mstr = '* *', func = function(session)
+	session.write('Content-type: text/plain\r\n\r\n')
+	session.write('Hello, World!\r\n')
 end}
 
 while true do
@@ -97,9 +97,9 @@ void main() {
 require 'websrv'
 
 local server = websrv.server.init{port = 80, file = 'help.log'}
-websrv.server.addhandler{server = server, mstr = '* *', func = function(write)
+websrv.server.addhandler{server = server, mstr = '* *', func = function(session)
 	websrv.client.addfile{file = 'help.log'}
-	write('End of log\n')
+	session.write('End of log\n')
 end}
 
 while true do
@@ -234,7 +234,27 @@ void main() {
 <HR><BR>
 <TABLE width='100%' bgcolor='CFCFCF' border=0><TR><TD>
 <CODE><PRE>
+require 'websrv'
 
+local server = websrv.server.init{port = 80, file = 'help.log'}
+websrv.server.addhandler{server = server, mstr = '* *', func = function(session)
+	if 'username' ~= session.username or 'password' ~= session.password then
+		websrv.client.HTTPdirective{directive = 'HTTP/1.1 401 Authorization Required'}
+        session.write('WWW-Authenticate: Basic realm=\"This site info\"\r\n')
+        session.write('Content-type: text/html\r\n\r\n')
+        session.write('\n')
+        session.write('Access denied\n')
+        session.write('\n')
+	end
+    session.write('Content-type: text/html\r\n\r\n')         
+    session.write('\n')        
+    session.write('You entered in your area\n')
+    session.write('\n')
+end}
+
+while true do
+	websrv.server.run{server = server}
+end
 </PRE></CODE>
 </TD></TR></TABLE>
 <HR><BR>
