--- a/examples.html
+++ b/examples.html
@@ -1,4 +1,4 @@
-<center><H3><font color='007700'>libwebserver examples</font></H3></center><BR><BR>
+<center><H3><font color='007700'>libwebserver and websrv for lua examples</font></H3></center><BR><BR>
 
 <!-- Johannes E. Schindelin -->
 <center><A name=helloworld><B><font color='000077'><a href=/hello><H3>Hello World</H3></a></font></B></center>
